--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Lining Link</title>
+</head>
+<body>
+<style>
+html,
+body,
+.container,
+.center {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 6.5em;
+}
+</style>
+
+<div class="center">
+  <h1>☕️</h1>
+</div>
+</body>
+</html>
