--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lining Link</title>
+  <title>Coffee</title>
 </head>
 <body>
 <style>
 html,
 body,
-.container,
-.center {
+.container, .center {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -25,10 +24,14 @@ body,
 h1 {
   font-size: 6.5em;
 }
+
+a {
+  text-decoration: none;
+}
 </style>
 
 <div class="center">
-  <h1>☕️</h1>
+  <h1><a href="portfolio.html">☕️<a></h1>
 </div>
 </body>
 </html>
