www not working

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <li>ramen-goers.com <a href="https://ramen-goers.com">link</a></li>
     <li>coffee-watchers.com <a href="https://coffee-watchers.com">link</a></li>
     <li>singing-contest.com <a href="https://singing-contest.com">link</a></li>
-    <li>kangkyu.com <a href="https://www.kangkyu.com/">link</a></li>
+    <li>kangkyu.com <a href="https://kangkyu.com/">link</a></li>
   </ol>
 </body>
 </html>
