--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="hidden lg:flex lg:gap-x-12">
         <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Product</a>
         <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features</a>
-        <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Marketplace</a>
+        <a href="intro.html" class="text-sm font-semibold leading-6 text-gray-900">Introduction</a>
         <a href="portfolio.html" class="text-sm font-semibold leading-6 text-gray-900">Portfolio</a>
       </div>
       <div class="hidden lg:flex lg:flex-1 lg:justify-end">
