--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
   <li class="flex items-center justify-between gap-x-6 py-5">
     <div class="min-w-0">
       <div class="flex items-start gap-x-3">
-        <p class="text-sm font-semibold leading-6 text-gray-900">Singing contest</p>
+        <p class="text-sm font-semibold leading-6 text-gray-900">singing-contest.com</p>
         <p class="mt-0.5 whitespace-nowrap rounded-md bg-green-50 px-1.5 py-0.5 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20">Complete</p>
       </div>
       <div class="mt-1 flex items-center gap-x-2 text-xs leading-5 text-gray-500">
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="flex flex-none items-center gap-x-4">
-      <a href="https://singing-contest.com" class="hidden rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:block">View project<span class="sr-only">, Singing contest</span></a>
+      <a href="https://singing-contest.com" class="hidden rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:block">View project<span class="sr-only">, singing-contest.com</span></a>
       <div class="relative flex-none">
         <button type="button" class="-m-2.5 block p-2.5 text-gray-500 hover:text-gray-900" id="options-menu-1-button" aria-expanded="false" aria-haspopup="true">
           <span class="sr-only">Open options</span>
