Add more contents

--- a/intro.html
+++ b/intro.html
@@ -1,59 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Lining Link ☕️</title>
+  <title>About - Lining Link ☕️</title>
 </head>
 <body>
   <div class="bg-white px-6 py-32 lg:px-8">
-  <div class="mx-auto max-w-3xl text-base leading-7 text-gray-700">
-    <p class="text-base font-semibold leading-7 text-indigo-600">Welcome to</p>
-    <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Lining Link, LLC</h1>
-    <p class="mt-6 text-xl leading-8">We transform how companies work by crafting custom web applications that streamline internal processes, boost productivity, and empower teams. Our expertise lies in building tailored solutions that perfectly align with your unique workflow and business requirements.</p>
-    <div class="mt-10 max-w-2xl">
-      <p>In today's fast-paced business environment, off-the-shelf solutions often fall short of meeting specific organizational needs. At Lining Link, we bridge this gap by developing bespoke internal tools that adapt to your existing processes rather than forcing your team to adapt to generic software.</p>
-      <ul role="list" class="mt-8 max-w-xl space-y-8 text-gray-600">
-        <li class="flex gap-x-3">
-          <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
-          </svg>
-          <span><strong class="font-semibold text-gray-900">Cost-Effective Solutions.</strong> Our custom internal tools eliminate the need for multiple subscription-based services, reducing long-term operational costs while providing exactly what your team needs.</span>
-        </li>
-        <li class="flex gap-x-3">
-          <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
-          </svg>
-          <span><strong class="font-semibold text-gray-900">Seamless Integration.</strong> We build web applications that integrate smoothly with your existing systems and workflows, ensuring minimal disruption during implementation.</span>
-        </li>
-        <li class="flex gap-x-3">
-          <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
-          </svg>
-          <span><strong class="font-semibold text-gray-900">Tailored Experience.</strong> Every solution we create is built specifically for your team's needs, incorporating your business logic and preferred workflows into intuitive web interfaces.</span>
-        </li>
-      </ul>
-      <p class="mt-8">Our development process prioritizes clear communication and iterative feedback, ensuring that the final product not only meets but exceeds your expectations. We believe in building long-term partnerships with our clients, supporting and evolving our solutions as your business grows.</p>
-      <h2 class="mt-16 text-2xl font-bold tracking-tight text-gray-900">Custom Tools for Modern Businesses</h2>
-      <p class="mt-6">Whether you need a comprehensive dashboard for data analytics, a specialized CRM system, or an automated workflow manager, we create web-based solutions that make your team more efficient and your processes more effective. Our applications are built with modern technology stacks, ensuring reliability, scalability, and ease of maintenance.</p>
-      <figure class="mt-10 border-l border-indigo-600 pl-9">
-        <blockquote class="font-semibold text-gray-900">
-          <p>"The custom internal tool that Lining Link developed has transformed how our team handles daily operations. It's exactly what we needed - efficient, user-friendly, and perfectly aligned with our workflow."</p>
-        </blockquote>
-        <figcaption class="mt-6 flex gap-x-4">
-          <div class="h-6 w-6 flex-none rounded-full bg-indigo-50"></div>
-          <div class="text-sm leading-6"><strong class="font-semibold text-gray-900">Trevor Baker</strong> – Operations Director</div>
-        </figcaption>
-      </figure>
-      <p class="mt-10">We understand that every business has unique challenges and requirements. Our expertise in web application development allows us to create solutions that address these specific needs while maintaining flexibility for future growth and changes.</p>
+    <div class="mx-auto max-w-3xl text-base leading-7 text-gray-700">
+      <p class="text-base font-semibold leading-7 text-indigo-600">Our Approach</p>
+      <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">How We Build Your Solution</h1>
+      <p class="mt-6 text-xl leading-8">At Lining Link, we specialize in developing custom applications that transform manual processes into efficient, automated workflows. Our tech stack and development approach ensure scalable, maintainable solutions that grow with your business.</p>
+
+      <div class="mt-10 max-w-2xl">
+        <h2 class="mt-16 text-2xl font-bold tracking-tight text-gray-900">Technology Stack</h2>
+        <p class="mt-6">We carefully choose technologies that provide the best balance of performance, reliability, and maintainability:</p>
+
+        <ul role="list" class="mt-8 max-w-xl space-y-8 text-gray-600">
+          <li class="flex gap-x-3">
+            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
+            </svg>
+            <span><strong class="font-semibold text-gray-900">Backend Systems with Go.</strong> We build high-performance, scalable backend services using Go, ensuring robust API design and efficient data processing. Go's simplicity and strong performance characteristics make it ideal for business-critical applications.</span>
+          </li>
+          <li class="flex gap-x-3">
+            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
+            </svg>
+            <span><strong class="font-semibold text-gray-900">Native Mobile Apps.</strong> For mobile solutions, we develop native applications using Kotlin for Android and Swift for iOS. This approach ensures the best possible performance and user experience on each platform.</span>
+          </li>
+          <li class="flex gap-x-3">
+            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
+            </svg>
+            <span><strong class="font-semibold text-gray-900">Modern Web Technologies.</strong> When building web applications, we use cutting-edge frameworks and tools while maintaining a focus on performance and accessibility. Each technology choice is made with your specific needs in mind.</span>
+          </li>
+        </ul>
+
+        <h2 class="mt-16 text-2xl font-bold tracking-tight text-gray-900">Our Development Process</h2>
+        <p class="mt-6">We follow a collaborative, iterative development process that ensures your solution perfectly matches your needs:</p>
+
+        <ul role="list" class="mt-8 max-w-xl space-y-8 text-gray-600">
+          <li class="flex gap-x-3">
+            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
+            </svg>
+            <span><strong class="font-semibold text-gray-900">Discovery Phase.</strong> We start by thoroughly understanding your current processes, pain points, and goals. This helps us design a solution that truly addresses your needs.</span>
+          </li>
+          <li class="flex gap-x-3">
+            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
+            </svg>
+            <span><strong class="font-semibold text-gray-900">Iterative Development.</strong> We build your solution incrementally, gathering feedback at each stage to ensure we're on the right track. This approach allows for flexibility and refinement throughout the process.</span>
+          </li>
+          <li class="flex gap-x-3">
+            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
+            </svg>
+            <span><strong class="font-semibold text-gray-900">Ongoing Support.</strong> After deployment, we provide continuous support and maintenance, ensuring your solution evolves with your business needs.</span>
+          </li>
+        </ul>
+
+        <h2 class="mt-16 text-2xl font-bold tracking-tight text-gray-900">Types of Solutions We Build</h2>
+        <p class="mt-6">Our expertise spans a wide range of business applications:</p>
+
+        <div class="mt-8 grid grid-cols-1 gap-8 sm:grid-cols-2">
+          <div class="bg-gray-50 p-6 rounded-lg">
+            <h3 class="font-semibold text-gray-900">Workflow Automation</h3>
+            <p class="mt-2 text-gray-600">Custom tools that automate repetitive tasks and streamline complex processes.</p>
+          </div>
+          <div class="bg-gray-50 p-6 rounded-lg">
+            <h3 class="font-semibold text-gray-900">Data Management</h3>
+            <p class="mt-2 text-gray-600">Systems for collecting, processing, and analyzing business data efficiently.</p>
+          </div>
+          <div class="bg-gray-50 p-6 rounded-lg">
+            <h3 class="font-semibold text-gray-900">Internal Tools</h3>
+            <p class="mt-2 text-gray-600">Custom dashboards and applications for employee productivity.</p>
+          </div>
+          <div class="bg-gray-50 p-6 rounded-lg">
+            <h3 class="font-semibold text-gray-900">Mobile Solutions</h3>
+            <p class="mt-2 text-gray-600">Native mobile apps that extend your systems to iOS and Android devices.</p>
+          </div>
+        </div>
+
+        <div class="mt-16">
+          <h2 class="text-2xl font-bold tracking-tight text-gray-900">Ready to Transform Your Business?</h2>
+          <p class="mt-6">Let's discuss how we can help optimize your operations with custom software solutions. Our team is ready to understand your needs and create a solution that empowers your organization.</p>
+          <div class="mt-10">
+            <a href="mailto:admin@lininglink.com" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Contact Us</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="mt-16 max-w-2xl">
-      <h2 class="text-2xl font-bold tracking-tight text-gray-900">Ready to Streamline Your Operations?</h2>
-      <p class="mt-6">Let's discuss how we can help optimize your internal processes with custom web applications. Our team is ready to understand your needs and create a solution that empowers your organization to work more efficiently.</p>
-      <p class="mt-8">From initial consultation to deployment and beyond, we're committed to delivering high-quality, maintainable solutions that provide lasting value for your business. Contact us to start the conversation about your custom internal tool needs.</p>
-    </div>
-  </div>
   </div>
 </body>
 </html>
