Add ruby on rails

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
 
     <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
       <div class="text-center">
+        <!-- <div class="flex justify-center">
+          <img src="images/logo.png" alt="Lining Link" class="h-24 sm:h-32 w-auto"/>
+        </div> -->
         <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Lining Link</h1>
         <p class="mt-4 text-xl font-semibold text-indigo-600">Customize · Automate · Simplify</p>
         <p class="mt-6 text-lg leading-8 text-gray-600">We craft custom internal tools that transform how companies work. Our tailored web applications streamline processes, boost productivity, and empower your team to work smarter.</p>
