--- a/intro.html
+++ b/intro.html
@@ -34,33 +34,23 @@
             <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
               <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
             </svg>
+            <span><strong class="font-semibold text-gray-900">Rapid Development with Ruby on Rails.</strong> For projects that require quick turnaround and standard business functionality, we leverage Ruby on Rails to build robust internal tools and web applications efficiently. Rails' convention-over-configuration approach allows us to deliver solutions faster while maintaining code quality.</span>
+          </li>
+          <li class="flex gap-x-3">
+            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
+            </svg>
             <span><strong class="font-semibold text-gray-900">Modern Web Technologies.</strong> When building web applications, we use cutting-edge frameworks and tools while maintaining a focus on performance and accessibility. Each technology choice is made with your specific needs in mind.</span>
           </li>
         </ul>
 
-        <h2 class="mt-16 text-2xl font-bold tracking-tight text-gray-900">Our Development Process</h2>
-        <p class="mt-6">We follow a collaborative, iterative development process that ensures your solution perfectly matches your needs:</p>
-
-        <ul role="list" class="mt-8 max-w-xl space-y-8 text-gray-600">
-          <li class="flex gap-x-3">
-            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
-            </svg>
-            <span><strong class="font-semibold text-gray-900">Discovery Phase.</strong> We start by thoroughly understanding your current processes, pain points, and goals. This helps us design a solution that truly addresses your needs.</span>
-          </li>
-          <li class="flex gap-x-3">
-            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
-            </svg>
-            <span><strong class="font-semibold text-gray-900">Iterative Development.</strong> We build your solution incrementally, gathering feedback at each stage to ensure we're on the right track. This approach allows for flexibility and refinement throughout the process.</span>
-          </li>
-          <li class="flex gap-x-3">
-            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
-            </svg>
-            <span><strong class="font-semibold text-gray-900">Ongoing Support.</strong> After deployment, we provide continuous support and maintenance, ensuring your solution evolves with your business needs.</span>
-          </li>
-        </ul>
+        <div class="mt-16">
+          <h2 class="text-2xl font-bold tracking-tight text-gray-900">Our Development Process</h2>
+          <p class="mt-6">We follow a structured yet flexible development process that ensures clear communication, quality deliverables, and successful outcomes. Learn more about how we work.</p>
+          <div class="mt-10">
+            <a href="process.html" class="text-indigo-600 font-semibold hover:text-indigo-500">Learn about our process →</a>
+          </div>
+        </div>
 
         <h2 class="mt-16 text-2xl font-bold tracking-tight text-gray-900">Types of Solutions We Build</h2>
         <p class="mt-6">Our expertise spans a wide range of business applications:</p>
