--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
       <div class="flex lg:flex-1">
         <a href="#" class="-m-1.5 p-1.5">
-          <span class="sr-only">Lining Link</span>
-          <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+          <img class="h-8 w-auto" src="images/logo.png" alt="Lining Link">
         </a>
       </div>
       <div class="flex lg:hidden">
@@ -41,8 +40,7 @@
       <div class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
         <div class="flex items-center justify-between">
           <a href="#" class="-m-1.5 p-1.5">
-            <span class="sr-only">Lining Link</span>
-            <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+            <img class="h-8 w-auto" src="images/logo-small.png" alt="Lining Link">
           </a>
           <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700" onclick="toggleMenu()">
             <span class="sr-only">Close menu</span>
@@ -54,12 +52,12 @@
         <div class="mt-6 flow-root">
           <div class="-my-6 divide-y divide-gray-500/10">
             <div class="space-y-2 py-6">
-              <a href="product.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Public Apps</a>
-              <a href="intro.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Introduction</a>
-              <a href="process.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Process</a>
+              <a href="product.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-green-50">Public Apps</a>
+              <a href="intro.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-green-50">Introduction</a>
+              <a href="process.html" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-green-50">Process</a>
             </div>
             <div class="py-6">
-              <a href="#contact" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Get in touch</a>
+              <a href="#contact" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-green-50">Get in touch</a>
             </div>
           </div>
         </div>
@@ -69,19 +67,15 @@
 
   <div class="relative isolate px-6 pt-14 lg:px-8">
     <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
-      <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+      <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-green-800 to-green-200 opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
     </div>
-
     <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
       <div class="text-center">
-        <!-- <div class="flex justify-center">
-          <img src="images/logo.png" alt="Lining Link" class="h-24 sm:h-32 w-auto"/>
-        </div> -->
         <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Lining Link</h1>
-        <p class="mt-4 text-xl font-semibold text-indigo-600">Customize · Automate · Simplify</p>
+        <p class="mt-4 text-xl font-semibold text-green-800">Customize · Automate · Simplify</p>
         <p class="mt-6 text-lg leading-8 text-gray-600">We craft custom internal tools that transform how companies work. Our tailored web applications streamline processes, boost productivity, and empower your team to work smarter.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6">
-          <a href="#contact" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Start Your Project</a>
+          <a href="#contact" class="rounded-md bg-green-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-green-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-800">Start Your Project</a>
           <a href="intro.html" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></a>
         </div>
       </div>
@@ -94,8 +88,8 @@
         </blockquote>
         <figcaption class="mt-10">
           <div class="mt-4 flex items-center justify-center space-x-3 text-base">
-            <div class="h-6 w-6 rounded-full bg-indigo-50"></div>
-            <div class="font-semibold text-gray-900">Trevor Baker</div>
+            <div class="h-6 w-6 rounded-full bg-green-50"></div>
+            <div class="font-semibold text-gray-900">Trevor</div>
             <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
               <circle cx="1" cy="1" r="1" />
             </svg>
@@ -107,7 +101,7 @@
 
     <div class="mx-auto max-w-7xl px-6 lg:px-8 py-24 sm:py-32">
       <div class="mx-auto max-w-2xl lg:text-center">
-        <h2 class="text-base font-semibold leading-7 text-indigo-600">Why Choose Us</h2>
+        <h2 class="text-base font-semibold leading-7 text-green-800">Why Choose Us</h2>
         <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Custom Solutions for Your Success</p>
         <p class="mt-6 text-lg leading-8 text-gray-600">We build exactly what your team needs, eliminating the compromises of off-the-shelf software.</p>
       </div>
@@ -115,7 +109,7 @@
         <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
           <div class="flex flex-col">
             <dt class="flex items-center gap-x-3 text-base font-semibold leading-7 text-gray-900">
-              <svg class="h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+              <svg class="h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                 <path d="M10.464 3.314a1 1 0 011.072 0l7 5A1 1 0 0119 9.172V17a1 1 0 01-1 1H2a1 1 0 01-1-1V9.172a1 1 0 01.464-.858l7-5z" />
               </svg>
               Cost-Effective
@@ -126,7 +120,7 @@
           </div>
           <div class="flex flex-col">
             <dt class="flex items-center gap-x-3 text-base font-semibold leading-7 text-gray-900">
-              <svg class="h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+              <svg class="h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5A.75.75 0 012 10z" clip-rule="evenodd" />
               </svg>
               Seamless Integration
@@ -137,7 +131,7 @@
           </div>
           <div class="flex flex-col">
             <dt class="flex items-center gap-x-3 text-base font-semibold leading-7 text-gray-900">
-              <svg class="h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+              <svg class="h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                 <path d="M15.98 1.804a1 1 0 00-1.96 0l-.24 1.192a1 1 0 01-.784.785l-1.192.238a1 1 0 000 1.962l1.192.238a1 1 0 01.785.785l.238 1.192a1 1 0 001.962 0l.238-1.192a1 1 0 01.785-.785l1.192-.238a1 1 0 000-1.962l-1.192-.238a1 1 0 01-.785-.785l-.238-1.192zM6.949 5.684a1 1 0 00-1.898 0l-.683 2.051a1 1 0 01-.633.633l-2.051.683a1 1 0 000 1.898l2.051.684a1 1 0 01.633.632l.683 2.051a1 1 0 001.898 0l.683-2.051a1 1 0 01.633-.633l2.051-.683a1 1 0 000-1.898l-2.051-.683a1 1 0 01-.633-.633L6.95 5.684z" />
               </svg>
               Tailored Experience
@@ -150,18 +144,17 @@
       </div>
     </div>
 
-    <div id="contact" class="mx-auto max-w-7xl px-6 lg:px-8 py-24 sm:py-32 bg-gray-50">
+    <div id="contact" class="mx-auto max-w-7xl px-6 lg:px-8 py-24 sm:py-32">
       <div class="mx-auto max-w-2xl text-center">
         <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Ready to Streamline Your Operations?</h2>
         <p class="mt-6 text-lg leading-8 text-gray-600">Let's discuss how we can help optimize your internal processes with custom web applications.</p>
         <div class="mt-10 flex items-center justify-center gap-x-6">
-          <a href="mailto:admin@lininglink.com" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Contact Us</a>
+          <a href="mailto:admin@lininglink.com" class="rounded-md bg-green-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-green-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-800">Contact Us</a>
         </div>
       </div>
     </div>
-
     <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
-      <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+      <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-green-800 to-green-200 opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
     </div>
   </div>
 </div>
