Other pages make green and green

--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,7 @@
 <body>
   <div class="bg-white px-6 py-32 lg:px-8">
     <div class="mx-auto max-w-3xl text-base leading-7 text-gray-700">
-      <p class="text-base font-semibold leading-7 text-indigo-600">Our Approach</p>
+      <p class="text-base font-semibold leading-7 text-green-800">Our Approach</p>
       <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">How We Build Your Solution</h1>
       <p class="mt-6 text-xl leading-8">At Lining Link, we specialize in developing custom applications that transform manual processes into efficient, automated workflows. Our tech stack and development approach ensure scalable, maintainable solutions that grow with your business.</p>
 
@@ -19,25 +19,25 @@
 
         <ul role="list" class="mt-8 max-w-xl space-y-8 text-gray-600">
           <li class="flex gap-x-3">
-            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
               <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
             </svg>
             <span><strong class="font-semibold text-gray-900">Backend Systems with Go.</strong> We build high-performance, scalable backend services using Go, ensuring robust API design and efficient data processing. Go's simplicity and strong performance characteristics make it ideal for business-critical applications.</span>
           </li>
           <li class="flex gap-x-3">
-            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
               <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
             </svg>
             <span><strong class="font-semibold text-gray-900">Native Mobile Apps.</strong> For mobile solutions, we develop native applications using Kotlin for Android and Swift for iOS. This approach ensures the best possible performance and user experience on each platform.</span>
           </li>
           <li class="flex gap-x-3">
-            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
               <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
             </svg>
             <span><strong class="font-semibold text-gray-900">Rapid Development with Ruby on Rails.</strong> For projects that require quick turnaround and standard business functionality, we leverage Ruby on Rails to build robust internal tools and web applications efficiently. Rails' convention-over-configuration approach allows us to deliver solutions faster while maintaining code quality.</span>
           </li>
           <li class="flex gap-x-3">
-            <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
               <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
             </svg>
             <span><strong class="font-semibold text-gray-900">Modern Web Technologies.</strong> When building web applications, we use cutting-edge frameworks and tools while maintaining a focus on performance and accessibility. Each technology choice is made with your specific needs in mind.</span>
@@ -48,7 +48,7 @@
           <h2 class="text-2xl font-bold tracking-tight text-gray-900">Our Development Process</h2>
           <p class="mt-6">We follow a structured yet flexible development process that ensures clear communication, quality deliverables, and successful outcomes. Learn more about how we work.</p>
           <div class="mt-10">
-            <a href="process.html" class="text-indigo-600 font-semibold hover:text-indigo-500">Learn about our process →</a>
+            <a href="process.html" class="text-green-800 font-semibold hover:text-green-700">Learn about our process →</a>
           </div>
         </div>
 
@@ -78,7 +78,7 @@
           <h2 class="text-2xl font-bold tracking-tight text-gray-900">Ready to Transform Your Business?</h2>
           <p class="mt-6">Let's discuss how we can help optimize your operations with custom software solutions. Our team is ready to understand your needs and create a solution that empowers your organization.</p>
           <div class="mt-10">
-            <a href="mailto:admin@lininglink.com" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Contact Us</a>
+            <a href="mailto:admin@lininglink.com" class="rounded-md bg-green-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-green-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-800">Contact Us</a>
           </div>
         </div>
       </div>
