--- a/process.html
+++ b/process.html
@@ -9,7 +9,7 @@
 <body>
   <div class="bg-white px-6 py-32 lg:px-8">
     <div class="mx-auto max-w-3xl text-base leading-7 text-gray-700">
-      <p class="text-base font-semibold leading-7 text-indigo-600">Development Process</p>
+      <p class="text-base font-semibold leading-7 text-green-800">Development Process</p>
       <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">How We Work</h1>
       <p class="mt-6 text-xl leading-8">We follow a structured yet flexible development process that ensures clear communication, quality deliverables, and successful outcomes for your custom software project.</p>
 
@@ -22,19 +22,19 @@
               <p class="mt-4 text-gray-600">We begin by thoroughly understanding your business needs and objectives:</p>
               <ul class="mt-4 space-y-3 text-gray-600">
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>Initial consultation to discuss your requirements</span>
                 </li>
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>Analysis of current workflows and pain points</span>
                 </li>
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>Definition of project scope and objectives</span>
@@ -50,19 +50,19 @@
               <p class="mt-4 text-gray-600">We create a detailed blueprint for your solution:</p>
               <ul class="mt-4 space-y-3 text-gray-600">
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>System architecture design</span>
                 </li>
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>User interface and experience planning</span>
                 </li>
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>Technology stack selection</span>
@@ -78,19 +78,19 @@
               <p class="mt-4 text-gray-600">We build your solution in stages, ensuring quality at each step:</p>
               <ul class="mt-4 space-y-3 text-gray-600">
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>Regular development sprints with clear milestones</span>
                 </li>
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>Continuous testing and quality assurance</span>
                 </li>
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>Regular progress updates and feedback sessions</span>
@@ -106,19 +106,19 @@
               <p class="mt-4 text-gray-600">We ensure a smooth transition and continued success:</p>
               <ul class="mt-4 space-y-3 text-gray-600">
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>Careful deployment planning and execution</span>
                 </li>
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>User training and documentation</span>
                 </li>
                 <li class="flex gap-x-3">
-                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor">
+                  <svg class="mt-1 h-5 w-5 flex-none text-green-800" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
                   </svg>
                   <span>Ongoing maintenance and support</span>
@@ -133,7 +133,7 @@
           <h2 class="text-2xl font-bold tracking-tight text-gray-900">Ready to Start Your Project?</h2>
           <p class="mt-6">Our structured process ensures your custom software solution is delivered on time, within budget, and meets all your requirements. Let's discuss how we can help transform your business operations.</p>
           <div class="mt-10">
-            <a href="mailto:admin@lininglink.com" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Contact Us</a>
+            <a href="mailto:admin@lininglink.com" class="rounded-md bg-green-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-green-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-800">Contact Us</a>
           </div>
         </div>
       </div>
