--- a/product.html
+++ b/product.html
@@ -26,7 +26,7 @@
               <span class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600">Live Now</span>
             </div>
             <h3 class="mt-3 text-lg font-semibold text-gray-900">
-              <a href="https://singingcontest.app" class="hover:text-indigo-600 transition-colors duration-200">
+              <a href="https://singingcontest.app" class="hover:text-green-800 transition-colors duration-200">
                 Singing Contest
               </a>
             </h3>
@@ -53,7 +53,7 @@
               <span class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600">Live Now</span>
             </div>
             <h3 class="mt-3 text-lg font-semibold text-gray-900">
-              <a href="https://ongoin.gs" class="hover:text-indigo-600 transition-colors duration-200">
+              <a href="https://ongoin.gs" class="hover:text-green-800 transition-colors duration-200">
                 ongoin.gs
               </a>
             </h3>
