--- a/index.html
+++ b/index.html
@@ -86,18 +86,30 @@
         <blockquote class="font-semibold text-gray-900">
           <p>"The custom internal tool that Lining Link developed has transformed how our team handles daily operations. It's exactly what we needed - efficient, user-friendly, and perfectly aligned with our workflow."</p>
         </blockquote>
-        <figcaption class="mt-6 flex gap-x-4">
-          <div class="h-6 w-6 flex-none rounded-full bg-green-50"></div>
-          <div class="text-sm leading-6"><strong class="font-semibold text-gray-900">Trevor</strong> – Operations Director</div>
+        <figcaption class="mt-10">
+          <div class="mt-4 flex items-center space-x-3 text-base">
+            <div class="h-6 w-6 rounded-full bg-green-50"></div>
+            <div class="text-sm leading-6"><strong class="font-semibold text-gray-900">Trevor</strong></div>
+            <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
+              <circle cx="1" cy="1" r="1" />
+            </svg>
+            <div class="text-sm leading-6 text-gray-600">Operations Director, Astra Media</div>
+          </div>
         </figcaption>
       </figure>
       <figure class="mt-10 border-l border-green-800 pl-9">
         <blockquote class="font-semibold text-gray-900">
           <p>"The YouTube analytics tool has streamlined our content performance tracking immensely. What used to take hours of manual data compilation now happens automatically, giving our team more time to focus on strategy and content creation."</p>
         </blockquote>
-        <figcaption class="mt-6 flex gap-x-4">
-          <div class="h-6 w-6 flex-none rounded-full bg-green-50"></div>
-          <div class="text-sm leading-6"><strong class="font-semibold text-gray-900">Maria</strong> – Chief Operation Officer</div>
+        <figcaption class="mt-10">
+          <div class="mt-4 flex items-center space-x-3 text-base">
+            <div class="h-6 w-6 rounded-full bg-green-50"></div>
+            <div class="text-sm leading-6"><strong class="font-semibold text-gray-900">Maria</strong></div>
+            <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
+              <circle cx="1" cy="1" r="1" />
+            </svg>
+            <div class="text-sm leading-6 text-gray-600">Chief Operation Officer, Betr Media</div>
+          </div>
         </figcaption>
       </figure>
     </div>
